# iced_video_player

./: Cargo.toml
examples/: minimal.rs
src/: pipeline.rs  video.rs  video_player.rs
